# dioxus_codemirror

./: .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  pages.yml
dioxus_codemirror/: Cargo.toml  build.rs
dioxus_codemirror/assets/codemirror/: __codemirror_autocomplete_6_20_3_es2022_autocomplete.js  __codemirror_lang-css_6_3_1_es2022_lang-css.js  __codemirror_lang-html_6_4_11_es2022_lang-html.js  __codemirror_lang-javascript_6_2_5_es2022_lang-javascript.js  __codemirror_lint_6_9_6_es2022_lint.js  __codemirror_lsp-client_6_2_4_es2022_lsp-client.js  __codemirror_search_6_7_0_es2022_search.js  __codemirror_state_6_6_0_es2022_state.js  __lezer_css_1_3_3_es2022_css.js  __lezer_javascript_1_5_4_es2022_javascript.js  __lezer_yaml_1_0_4_es2022_yaml.js  _codemirror_6_0_2_es2022_codemirror.js  _marked_18_0_4_es2022_marked.js  codemirror.js  codemirror__lang-html.js  codemirror__lang-markdown.js  codemirror__lint.js  codemirror__search.js  crelt.js  index.js  lezer__common.js  lezer__css.js  lezer__javascript.js  lezer__lr.js  marijn__find-cluster-break.js  marked.js  node_events.js
dioxus_codemirror/assets/codemirror-vendor/: __codemirror_commands_6_10_3_es2022_commands.js  __codemirror_lang-markdown_6_5_0_es2022_lang-markdown.js  __codemirror_lang-yaml_6_1_3_es2022_lang-yaml.js  __codemirror_language_6_12_3_es2022_language.js  __codemirror_view_6_43_0_es2022_view.js  __lezer_highlight_1_2_3_es2022_highlight.js  __lezer_html_1_3_13_es2022_html.js  __lezer_lr_1_4_10_es2022_lr.js  __lezer_markdown_1_6_4_es2022_markdown.js  _marked_18_0_5_es2022_marked.js  codemirror__autocomplete.js  codemirror__commands.js  codemirror__lang-css.js  codemirror__lang-javascript.js  codemirror__lang-yaml.js  codemirror__language.js  codemirror__lsp-client.js  codemirror__state.js  codemirror__view.js  index.js  lezer__highlight.js  lezer__html.js  lezer__markdown.js  lezer__yaml.js  manifest.json  marked.js  node_process.js  style-mod.js  w3c-keyname.js
dioxus_codemirror/src/: cmd.rs  code_mirror.rs  editor_features.rs  evt.rs  language.rs  lib.rs  lsp.rs  theme.rs  theme_color.rs  theme_colors.rs
dioxus_codemirror/src/code_mirror/: glue.js
dioxus_codemirror/src/lsp/: lsp_bridge.rs  lsp_message.rs  lsp_pusher.rs  lsp_server.rs  lsp_server_async.rs
example/: Cargo.toml  Dioxus.toml
example/assets/: licenses.html
example/src/: main.rs  mock_lsp_server.rs  mock_lsp_server_async.rs
xtask/: Cargo.toml
xtask/src/: main.rs
