[workspace]
resolver = "3"
members = [
    "dioxus_codemirror",
    "example",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/azriel91/dioxus_codemirror"

[workspace.dependencies]
dioxus_codemirror = { path = "dioxus_codemirror" }
dioxus = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
