[package]
name = "dioxus_codemirror"
description = "A Dioxus web component that wraps the CodeMirror 6 editor."
documentation = "https://docs.rs/dioxus_codemirror/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false

[lints]
workspace = true

[features]
default = []
# Each `lang-*` feature names one CodeMirror language. These are currently
# no-ops for the shipped JS: the whole language superset is always served,
# because Dioxus cannot yet serve a build-script-generated, per-feature asset
# folder -- see https://github.com/DioxusLabs/dioxus/issues/4426 and
# `code_mirror.rs`. The features are kept so per-language trimming can return
# once that lands. Enable extras with, e.g.
# `dioxus_codemirror = { version = "...", features = ["lang-rust", "lang-css"] }`.
lang-yaml = []
lang-markdown = []
lang-javascript = []
lang-css = []
lang-html = []
# Convenience: bundle every supported language.
lang-all = [
    "lang-yaml",
    "lang-markdown",
    "lang-javascript",
    "lang-css",
    "lang-html",
]

[dependencies]
# Not inherited from the workspace: this crate needs `default-features = false`,
# which a workspace dependency cannot override. The `example` crate uses the
# workspace `dioxus` (with default features) plus the `web` platform feature.
dioxus = { version = "0.7", default-features = false, features = [
    "macro",
    "html",
    "signals",
    "hooks",
    "document",
    "asset",
] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
